--- a/notes.csproj
+++ b/notes.csproj
@@ -127,8 +127,8 @@
     <Compile Include="ViewModel\NotesViewModel.cs" />
     <Compile Include="ViewModel\NotebooksViewModel.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
-    <Compile Include="Views\NotePage.xaml.cs">
-      <DependentUpon>NotePage.xaml</DependentUpon>
+    <Compile Include="Views\EditorPage.xaml.cs">
+      <DependentUpon>EditorPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\NotesPage.xaml.cs">
       <DependentUpon>NotesPage.xaml</DependentUpon>
@@ -164,7 +164,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Views\NotePage.xaml">
+    <Page Include="Views\EditorPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
