--- a/notes.csproj
+++ b/notes.csproj
@@ -119,6 +119,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\EditorViewModel.cs" />
+    <Compile Include="Views\CustomRichEditBox.cs" />
     <Compile Include="Model\Notebook.cs" />
     <Compile Include="Model\Storage.cs" />
     <Compile Include="ViewModel\ActionCommand.cs" />
