--- a/notes.csproj
+++ b/notes.csproj
@@ -127,6 +127,7 @@
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\NotesViewModel.cs" />
     <Compile Include="ViewModel\NotebooksViewModel.cs" />
+    <Compile Include="ViewModel\ObservableObject.cs" />
     <Compile Include="ViewModel\ViewModel.cs" />
     <Compile Include="Views\EditorPage.xaml.cs">
       <DependentUpon>EditorPage.xaml</DependentUpon>
