--- a/notes.csproj
+++ b/notes.csproj
@@ -119,6 +119,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ColorUtils.cs" />
+    <Compile Include="ColorToBrushConverter.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="Model\Notebook.cs" />
     <Compile Include="Model\Storage.cs" />
@@ -153,6 +155,7 @@
   <ItemGroup>
     <Content Include="Assets\center-alignment.png" />
     <Content Include="Assets\cover1.png" />
+    <Content Include="Assets\fill.png" />
     <Content Include="Assets\justify-alignment.png" />
     <Content Include="Assets\left-alignment.png" />
     <Content Include="Assets\list.png" />
@@ -204,6 +207,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Drawing.Common">
+      <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
