--- a/notes.csproj
+++ b/notes.csproj
@@ -121,6 +121,7 @@
     </Compile>
     <Compile Include="ColorUtils.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
+    <Compile Include="ToggleFavoriteStringConverter.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="Model\Notebook.cs" />
     <Compile Include="Model\Storage.cs" />
