--- a/notes.csproj
+++ b/notes.csproj
@@ -121,7 +121,9 @@
     </Compile>
     <Compile Include="ColorUtils.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
+    <Compile Include="StreamToBitmapConverter.cs" />
     <Compile Include="ToggleFavoriteStringConverter.cs" />
+    <Compile Include="UriToImageConverter.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="Model\Notebook.cs" />
     <Compile Include="Model\Storage.cs" />
