--- a/notes.csproj
+++ b/notes.csproj
@@ -122,6 +122,8 @@
     <Compile Include="AppURIToFileConverter.cs" />
     <Compile Include="ColorUtils.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
+    <Compile Include="FlyoutHelper.cs" />
+    <Compile Include="Model\ISearchable.cs" />
     <Compile Include="StreamToBitmapConverter.cs" />
     <Compile Include="ToggleFavoriteStringConverter.cs" />
     <Compile Include="UriToImageConverter.cs" />
@@ -131,7 +133,6 @@
     <Compile Include="ViewModel\ActionCommand.cs" />
     <Compile Include="ViewModel\Command.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
-    <Compile Include="ViewModel\NotebookCover.cs" />
     <Compile Include="ViewModel\NotesViewModel.cs" />
     <Compile Include="ViewModel\NotebooksViewModel.cs" />
     <Compile Include="ViewModel\ObservableObject.cs" />
